WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46922
[Chromium] WebIDBDatabase and WebIDBObjectStore are missing methods called from Chromium land.
https://bugs.webkit.org/show_bug.cgi?id=46922
Summary
[Chromium] WebIDBDatabase and WebIDBObjectStore are missing methods called fr...
Andrei Popescu
Reported
2010-09-30 10:53:21 PDT
[Chromium] WebIDBDatabase and WebIDBObjectStore are missing methods called from Chromium land.
Attachments
Patch
(4.12 KB, patch)
2010-09-30 10:55 PDT
,
Andrei Popescu
jorlow
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrei Popescu
Comment 1
2010-09-30 10:55:43 PDT
Created
attachment 69352
[details]
Patch
Jeremy Orlow
Comment 2
2010-09-30 10:56:39 PDT
Comment on
attachment 69352
[details]
Patch r=me
Andrei Popescu
Comment 3
2010-09-30 10:58:10 PDT
Committed
r68803
: <
http://trac.webkit.org/changeset/68803
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug