2010-09-30  Andrei Popescu  <andreip@google.com>

Reviewed by Jeremy Orlow.

        [Chromium] WebIDBDatabase and WebIDBObjectStore are missing methods called from Chromium land.
        https://bugs.webkit.org/show_bug.cgi?id=46922

        The missing functions were removed in r68795.

        * public/WebIDBDatabase.h:
        (WebKit::WebIDBDatabase::createObjectStore):
        (WebKit::WebIDBDatabase::removeObjectStore):
        * public/WebIDBObjectStore.h:
        (WebKit::WebIDBObjectStore::createIndex):
        (WebKit::WebIDBObjectStore::removeIndex):

Canonical link: https://commits.webkit.org/59435@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68803 268f45cc-cd09-0410-ab3c-d52691b4dbfc