WebKit/chromium/public/WebIDBDatabase.h
@@ -61,6 +61,8 @@ public:
         WEBKIT_ASSERT_NOT_REACHED();
         return WebDOMStringList();
     }
+    // FIXME: Remove once we update Chromium side.
+    virtual void createObjectStore(const WebString& name, const WebString& keyPath, bool autoIncrement, WebIDBCallbacks*) { WEBKIT_ASSERT_NOT_REACHED(); }
     virtual void createObjectStore(const WebString& name, const WebString& keyPath, bool autoIncrement, WebIDBCallbacks*, const WebIDBTransaction&) { WEBKIT_ASSERT_NOT_REACHED(); }
     // Transfers ownership of the WebIDBObjectStore to the caller.
     virtual WebIDBObjectStore* objectStore(const WebString& name, unsigned short mode)
@@ -68,6 +70,8 @@ public:
         WEBKIT_ASSERT_NOT_REACHED();
         return 0;
     }
+    // FIXME: Remove once we update Chromium side.
+    virtual void removeObjectStore(const WebString& name, WebIDBCallbacks* callbacks) { WEBKIT_ASSERT_NOT_REACHED(); }
     virtual void removeObjectStore(const WebString& name, WebIDBCallbacks* callbacks, const WebIDBTransaction&) { WEBKIT_ASSERT_NOT_REACHED(); }
     virtual void setVersion(const WebString& version, WebIDBCallbacks* callbacks) { WEBKIT_ASSERT_NOT_REACHED(); }
     // Transfers ownership of the WebIDBTransaction to the caller.
